WIP: use visibility api to stop time passing when hidden

--- a/packages/demo/src/scss/Selector.scss
+++ b/packages/demo/src/scss/Selector.scss
@@ -12,6 +12,7 @@
 
 .Selector {
   position: relative;
+  cursor: pointer;
 }
 
 .nav .Selector {
